Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6793

Metadata doesn't recover after restarting statestore

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 3.0, Impala 2.12.0
    • Impala 3.0, Impala 2.12.0
    • Catalog
    • None

    Description

      Currently when the statestore is restarted, impalad would clear its metadata and never recovers . After some investigation, the case is that catalogd doesn't send any metadata to the restarted statestore. This bug is introduced by IMPALA-5990.

      Attachments

        Issue Links

          Activity

            People

              tianyiwang Tianyi Wang
              tianyiwang Tianyi Wang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: